# PokerHandEquities

./: .gitignore  Board.cpp  CMakeLists.txt  Card.cpp  Deck.cpp  Deck.h  HandEvaluator.cpp  HandEvaluator.h  main.cpp
include/: Board.h  Card.h  Deck.h  EquityCalculator.h  Hand.h  HandEvaluator.h
src/: Board.cpp  Card.cpp  Deck.cpp  EquityCalculator.cpp  Hand.cpp  HandEvaluator.cpp  main.cpp
